--- a/pato_appka/templates/index.html
+++ b/pato_appka/templates/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Wolna Patologia</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Edgy Flask App</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #121212;
+            color: #fff;
+            text-align: center;
+        }
+        h1 {
+            font-size: 3em;
+            margin-top: 50px;
+        }
+        .quote {
+            font-size: 1.5em;
+            margin-top: 30px;
+            color: #ff4081;
+        }
+        .button {
+            background-color: #ff4081;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            font-size: 1.2em;
+            margin: 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .button:hover {
+            background-color: #e10060;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to my Wola!</h1>
+
+    <h1>Welcome to the Edgy Flask App!</h1>
+    <p>Click below for a random dose of edge:</p>
+    <button class="button" onclick="getQuote()">Get Edgy Quote</button>
+    
+    <div id="quoteContainer" class="quote">
+        <p>Press the button to get a quote!</p>
+    </div>
+
+    <script>
+        function getQuote() {
+            fetch('/quote')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('quoteContainer').innerHTML = `<p>${data.quote}</p>`;
+                });
+        }
+    </script>
+
 </body>
 </html>
-
