--- a/pato_appka/templates/index.html
+++ b/pato_appka/templates/index.html
@@ -37,12 +37,12 @@
 </head>
 <body>
 
-    <h1>Welcome to the Edgy Flask App!</h1>
-    <p>Click below for a random dose of edge:</p>
+    <h1>Welcome to the Wolna Patola!</h1>
+    <p>Click below for a random dose of a local edge:</p>
     <button class="button" onclick="getQuote()">Get Edgy Quote</button>
     
     <div id="quoteContainer" class="quote">
-        <p>Press the button to get a quote!</p>
+        <p>Press the button to get our quote!</p>
     </div>
 
     <script>
